# android-sdl2-gradle-template

./: build.gradle  settings.gradle
.github/workflows/: main.yml
SDL2/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
main/: build.gradle
main/src/: main.cpp
